# kainexa.ai.platform

./: .gitignore  README.md
kainexa-core/: .dockerfile  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.mak  add_workflow_endpoint.py  comprehensive_check.py  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml  quick_test.py  requirements-dev.txt  requirements-gpu.txt  requirements.txt  test_kainexa_imports.py
kainexa-core/configs/policies/: default_policies.yml
kainexa-core/data/sample_docs/: production_manual.txt  quality_control.txt  smart_factory_guide.txt
kainexa-core/database/migrations/: 001_create_tables.sql
kainexa-core/database/schemas/: workflow_schema.sql
kainexa-core/docker/postgres/: init.sql
kainexa-core/docs/: Kainexa AI Agent Platform - 제조업 적용 시나리오.md  Kainexa Core Directory Structure_v2.md  Kainexa Core 아키텍처 설계_v1.md  Kainexa Core 아키텍처 재설계_v2.md  Ubuntu 서버 환경 설정 및 테스트 가이드.md  kainexa Core v2 전환 작업 계획.md  mcp_permissions.py
kainexa-core/docs/api/: openapi.yml
kainexa-core/docs/dsl/: kainexa-workflow-dsl-schema-v1.0.yml
kainexa-core/migrations/: 001_create_tables.sql
kainexa-core/scripts/: check_services.sh  clean_database.py  dev.sh  download_solar_model.py  init_database.py  run.sh  run_demo.py  setup_env.sh  test_api.py  test_chat.py  test_chat_debug.py  test_rag_search.py  test_solar_inference.py  upload_documents.py
kainexa-core/src/api/: main.py  (+3 more)
kainexa-core/tests/: conftest.py  test_api.py  test_integration.py  test_policy_engine.py  test_services.sh
kainexa-core/webapp/: index.html
(+185 files in other folders)
